@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - fix test that broke with Dist::Zilla 6.017 (a test changed its
+            filename)
 
 0.158     2020-06-03 17:27:26Z
           - properly escape the escaped PAUSE download URL (sorry again Olaf!)
